src/test/testFiles/invalid/semanticErrors/redeclaredVariable.val
let x = 1;
let x = 2;